# inventory_cover_streamlit_report

./: .env.example  .gitignore  PROJECT_AMBITION.md  README.md  calc.ipynb  download_google_sheet.ipynb  pyproject.toml  streamlit_app.py
.streamlit/: secrets.toml.example
inventory_cover/: __init__.py
scripts/: dump_py_to_txt.py  run_b2b_dispatch_pipeline.py  run_inventory_cover_pipeline.py  run_po_items_pipeline.py  run_sales_inventory_pipeline.py  run_source_pipelines.py
src/inventory_cover/: __init__.py  b2b_dispatch_schemas.py  cli.py  config.py  exceptions.py  inventory_cover_schemas.py  logging_utils.py  sales_inventory_schemas.py  schemas.py
src/inventory_cover/calculations/: __init__.py  inventory_cover_builder.py  inventory_cover_formulas.py
src/inventory_cover/io/: b2b_dispatch_excel_io.py  b2b_dispatch_file_discovery.py  excel_io.py  file_discovery.py  google_drive_report_store.py  inventory_cover_input_loader.py  sales_inventory_excel_io.py  sales_inventory_file_discovery.py  sales_inventory_mapping_io.py
src/inventory_cover/normalization/: __init__.py  b2b_dispatch_normalizer.py  inventory_cover_aggregator.py  po_items_normalizer.py  sales_inventory_normalizer.py
src/inventory_cover/notifications/: email_config.py  smtp_report_mailer.py
tests/: test_b2b_dispatch_pipeline.py  test_date_parsing.py  test_email_delivery.py  test_google_drive_report_store.py  test_header_mapping.py  test_inventory_cover_pipeline.py  test_po_items_pipeline.py  test_sales_inventory_pipeline.py  test_streamlit_dashboard_helpers.py
(+16 files in other folders)
