[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inventory-cover"
version = "0.1.0"
description = "Local Amazon Vendor Central inventory cover reporting engine."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openpyxl>=3.1,<4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
]

[project.scripts]
inventory-cover = "inventory_cover.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
