[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inventory-cover"
version = "0.1.0"
description = "Local Amazon Vendor Central inventory cover reporting engine."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-api-python-client>=2.0,<3",
    "google-auth>=2.0,<3",
    "google-auth-oauthlib>=1.2,<2",
    "openpyxl>=3.1,<4",
    "pandas>=2.0,<3",
    "streamlit>=1.36,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
]

[project.scripts]
inventory-cover = "inventory_cover.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
